# CSC3050-project-3

./: CMakeLists.txt  CPI_data.md  README.md  performance.md  run-test-release.sh
analysis/: analysis.ipynb
cache-trace/: mytrace.trace  trace1.trace.csv  trace2.trace.csv
src/: Cache.cpp  Cache.h  MainCPU.cpp  MainMulCache.cpp  MainSinCache.cpp  MemoryManager.cpp  Simulator.cpp  simulator.h
test-release/: add.c  add.ref  add.riscv  add.s  lib.c  lib.h  mul-div.c  mul-div.out  mul-div.riscv  mul-div.s  n!.c  n!.riscv  n!.s  qsort.c  qsort.ref  qsort.riscv  qsort.s  simple-function.c  simple-function.riscv  simple-function.s
test_C/: ackermann.c  ackermann.riscv  helloworld.c  helloworld.riscv  matrixmulti.c  matrixmulti.riscv  quicksort.c  quicksort.riscv  test_arithmetic.c  test_arithmetric.riscv  test_branch.c  test_branch.riscv  test_syscall.c  test_syscall.riscv
